[package]
name = "ht"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy-tokio-tasks = "*"
fastrand = "2.0.0"
half = { version = "2.2.1", features = [
  "serde",
  "zerocopy",
  "num-traits",
  "bytemuck",
] }
intmap = { version = "2.0.0", features = ["serde"] }
iovec = "0.1.4"
itoa = "1.0.6"
libloading = "0.8.0"
num-bigint = { version = "0.4.3", features = ["rand", "serde", "quickcheck"] }
num-traits = "0.2.15"
num_cpus = "1.15.0"
parking_lot = { version = "0.12.1", features = [
  "serde",
  "arc_lock",
  "deadlock_detection",
] }
ryu = "1.0.13"
serde = "1.0.164"
tokio = "1.28.2"
uuid = { version = "1.3.3", features = ["fast-rng", "v4"] }


[dependencies.bevy]
version = "*"
features = ["dynamic_linking", "detailed_trace"]

[dependencies.ht-core]
path = "../ht-core"
